--- a/index.html
+++ b/index.html
@@ -46,12 +46,72 @@
 	<div id="content_wrap">
 		<div class="content clearfix">
 			<div class="select">
-				<a href="" class="active">공항예약</a>
+				<a href=".flight_book" class="active">공항예약</a>
 				<a href="">호텔예약</a>
 				<a href="">렌트카</a>
 				<a href="">휴양지</a>
 			</div>
-			<div class="scontent"></div>
+			<div class="flight_book">
+				<form name="trip_sch" method="get">
+				<label for="nation_sch">가고싶은 나라를 선택하세요.</label><br>
+				<select name="nation_sch" id="nation_sch" placeholder="선택하세요.">
+					<option value="france">프랑스</option>
+					<option value="japan">일본</option>
+					<option value="china">중국</option>
+					<option value="america">미국</option>
+					<option value="canada">캐나다</option>
+				</select>
+				<div class="form_row clearfix">
+					<div class="row">
+						<label for="start_sch">출발일</label><br>
+						<select name="start_sch" id="start_sch">
+							<option value="1">1월</option>
+							<option value="2">2월</option>
+							<option value="3">3월</option>
+							<option value="4">4월</option>
+						</select>
+					</div>
+					<div class="row">
+						<label for="arrive_sch">도착일</label><br>
+						<select name="arrive_sch" id="arrive_sch">
+							<option value="1">1월</option>
+							<option value="2">2월</option>
+							<option value="3">3월</option>
+							<option value="4">4월</option>
+						</select>
+					</div>
+				</div>
+				<div class="form_row clearfix">
+					<div class="row">
+						<label for="grade_sch">좌석등급</label><br>
+						<select name="grade_sch" id="grade_sch">
+							<option value="1">1등급</option>
+							<option value="2">2등급</option>
+							<option value="3">3등급</option>
+							<option value="4">4등급</option>
+						</select>
+					</div>
+					<div class="row2">
+						<label for="adult_sch">성인</label><br>
+						<select name="adult_sch" id="adult_sch">
+							<option value="1">1</option>
+							<option value="2">2</option>
+							<option value="3">3</option>
+							<option value="4">4</option>
+						</select>
+					</div>
+					<div class="row2">
+						<label for="kids_sch">아이</label><br>
+						<select name="kids_sch" id="kids_sch">
+							<option value="1">1</option>
+							<option value="2">2</option>
+							<option value="3">3</option>
+							<option value="4">4</option>
+						</select>
+					</div>
+				</div>
+			</form>
+			</div>
 			<div class="title">
 				<h2>TRAVEL GO</h2>
 				<p>지금 여행이 떠나고 싶다면?<br>하이미디어와 여행을 떠나자!</p>
