--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="./css/reset.css">
 	<link rel="stylesheet" href="./css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<script src="./js/jquery-3.3.1.min.js"></script>
 	<script src="./js/jquery.bxslider.js"></script>
 </head>
@@ -46,10 +47,10 @@
 	<div id="content_wrap">
 		<div class="content clearfix">
 			<div class="select">
-				<a href=".flight_book" class="active">공항예약</a>
-				<a href="">호텔예약</a>
-				<a href="">렌트카</a>
-				<a href="">휴양지</a>
+				<a href="#" class="active"><i class="fas fa-plane"></i> 공항예약</a>
+				<a href="#"><i class="fas fa-h-square"></i> 호텔예약</a>
+				<a href="#"><i class="fas fa-car"></i> 렌트카</a>
+				<a href="#"><i class="fas fa-suitcase"></i> 휴양지</a>
 			</div>
 			<div class="flight_book">
 				<form name="trip_sch" method="get">
@@ -110,6 +111,7 @@
 						</select>
 					</div>
 				</div>
+				<button><i class="fas fa-search">검색하기</i></button>
 			</form>
 			</div>
 			<div class="title">
@@ -139,32 +141,89 @@
 			<div class="row">
 				<div class="visual">
 					<img src="./images/con03.jpg" alt="호텔">
+					<div class="hotel">
+						<p>HILLTON HOTEL(PARIS)</p>
+						<img src="./images/star.png" alt="별점" class="star">
+					</div>
 				</div>
 				<div class="visual">
 					<img src="./images/con04.jpg" alt="관광명소">
+					<div class="hotel">
+						<p>관광명소 (디즈니랜드)</p>
+						<img src="./images/star.png" alt="별점" class="star">
+					</div>
 				</div>
 				<div class="visual">
 					<img src="./images/con05.jpg" alt="날씨">
+					<p>TOKYO</p>
+					<div class="tokyo">
+						<h4>20℃ 구름조금<br><span>습도 60% 바람 남남동 2m/s</span></h4>
+					</div>
 				</div>
 				<div class="visual">
 					<img src="./images/con06.jpg" alt="후기">
+					<div class="shunme">
+						<p>"해외여행은 처음이었는데,<br>하이디미어여행 덕분에 무사히<br>다녀올 수 있었어요."</p>
+						<span>프랑스 파리 자유여행</span><br>
+						<img src="./images/star.png" alt="별점" class="star">
+					</div>
+					<div class="review">
+						<p>facebook 여행후기<br><span>(임정희님)</span></p>
+					</div>
 				</div>
 			</div>
-			<div class="row">
+			<div class="row brow">
 				<div class="visual">
 					<img src="./images/con07.jpg" alt="여행정보">
+					<i class="fas fa-plus-circle"></i>
+					<div class="upinpo">
+						<h3>여행정보</h3>
+						<p>다양한 나라의 명소와 맛집 등<br>
+						상세한 정보를 볼 수 있습니다.</p>
+					</div>
 				</div>
 				<div class="visual">
 					<img src="./images/con08.jpg" alt="맛집">
+					<i class="fas fa-plus-circle"></i>
+					<div class="downinpo">
+						<h3>맛집정보</h3>
+						<p>다양한 나라의 명소와 맛집 등<br>
+						상세한 정보를 볼 수 있습니다.</p>
+					</div>
 				</div>
 				<div class="visual">
 					<img src="./images/con09.jpg" alt="숙박">
+					<i class="fas fa-plus-circle"></i>
+					<div class="downinpo">
+						<h3>숙박정보</h3>
+						<p>다양한 나라의 명소와 맛집 등<br>
+						상세한 정보를 볼 수 있습니다.</p>
+					</div>
 				</div>
 				<div class="visual">
 					<img src="./images/con10.jpg" alt="여행후기">
+					<i class="fas fa-plus-circle"></i>
+					<div class="upinpo">
+						<h3>여행자후기</h3>
+						<p>다양한 나라의 명소와 맛집 등<br>
+						상세한 정보를 볼 수 있습니다.</p>
+					</div>
 				</div>
 			</div>
 		</div>
+		<footer id="footer_wrap">
+			<ul class="clearfix">
+				<li><a href="#">이용약관</a></li>
+				<li><a href="#">개인정보취급방침</a></li>
+				<li><a href="#">사이트맵</a></li>
+				<li><a href="#">고객센터</a></li>
+				<li><a href="#">광고 및 제휴문의</a></li>
+			</ul>
+			<address>
+				123-456 서울특별시 구로구 구로동 (주)하이미디어 사업자등록번호 : 123-45-678910  대표이사 : 02-123-4568<br>
+				COPYRIGHTⓒ2014 HIMEDIA TOUR. ALL RIGHTS RESERVED.
+			</address>
+		</footer>
 	</div>
-</body>
+	</body>
 </html>
