--- a/sub.html
+++ b/sub.html
@@ -70,15 +70,47 @@
 						전문 여행사입니다. 처음 우리가 세운 거창한 목표는 “여행을 통한 인간 삶의 긍정적 변화”였습니다. 상품을 기획하고, 컨텐츠를 개발하고, 새로운 지역을 탐구하며
 						19년을 쉬지 않고 달려왔습니다.</p>
 					</div>
+					<div class="table_layout">
+						<ul>
+							<li class="table_tr clearfix">
+								<div class="subject">법인명</div>
+								<div class="information">(주)하이미디어</div>
+							</li>
+							<li class="table_tr clearfix">
+								<div class="subject">사업자등록번호</div>
+								<div class="information">123-45-67890</div>
+							</li>
+							<li class="table_tr clearfix">
+								<div class="subject">대표자</div>
+								<div class="information">홍길동</div>
+							</li>
+							<li class="table_tr clearfix">
+								<div class="subject">설립일</div>
+								<div class="information">1993년 10월 10일</div>
+							</li>
+							<li class="table_tr clearfix">
+								<div class="subject">주소</div>
+								<div class="information">서울시 구로구 구로동</div>
+							</li>
+							<li class="table_tr clearfix">
+								<div class="subject">전화</div>
+								<div class="information">02-123-4567</div>
+							</li>
+							<li class="table_tr clearfix">
+								<div class="subject">홈페이지</div>
+								<div class="information">www.TOUR.co.kr</div>
+							</li>
+						</ul>
+					</div>
 				</div>
 				<div class="content_img"><img src="./images/family.jpg" alt=""></div>
 			</div>
 			<div class="tour">
 				<ul>
-					<li><a href="#"><p>FRANCE TOUR</p></a></li>
-					<li><a href="#"><p>BRITAIN TOUR</p></a></li>
-					<li><a href="#"><p>SWISS TOUR</p></a></li>
-					<li><a href="#"><p>BELGIUM TOUR</p></a></li>
+					<li><a href="#"><p>FRANCE TOUR</p><img src="./images/franch1.png" alt="프랑스국기"></a></li>
+					<li><a href="#"><p>BRITAIN TOUR</p><img src="./images/baitain1.png" alt="영국국기"></a></li>
+					<li><a href="#"><p>SWISS TOUR</p><img src="./images/swiss1.jpg" alt="스위스국기"></a></li>
+					<li><a href="#"><p>BELGIUM TOUR</p><img src="./images/belgium1.png" alt="벨기에국기"></a></li>
 				</ul>
 			</div>
 		</div>
